# nexus

./: .env.example  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  eval.yml  rag_reindex.yml
evals/: run_evals.py
evals/datasets/: code_review_eval.jsonl  incident_eval.jsonl
infra/helm/nexus/: Chart.yaml  values-prod.yaml  values.yaml
infra/helm/nexus/templates/: _helpers.tpl  hpa.yaml  ingress.yaml  mcp-datadog-deployment.yaml  mcp-github-deployment.yaml  mcp-jira-deployment.yaml  mcp-slack-deployment.yaml  orchestrator-deployment.yaml  orchestrator-service.yaml  postgres-statefulset.yaml  rag-indexer-cronjob.yaml  redis-statefulset.yaml  secrets.yaml
services/mcp-datadog/: Dockerfile  pyproject.toml
services/mcp-datadog/src/mcp_datadog/: __init__.py  server.py  tools.py
services/mcp-github/: Dockerfile  pyproject.toml
services/mcp-github/src/mcp_github/: __init__.py  server.py  tools.py
services/mcp-jira/: Dockerfile  pyproject.toml
services/mcp-jira/src/mcp_jira/: __init__.py  server.py  tools.py
services/mcp-slack/: Dockerfile  pyproject.toml
services/mcp-slack/src/mcp_slack/: __init__.py  server.py  tools.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/src/orchestrator/: __init__.py  config.py  main.py
services/orchestrator/src/orchestrator/agents/: base.py  code_review.py  deploy.py  incident.py  rag_agent.py
services/orchestrator/src/orchestrator/graph/: __init__.py  nodes.py  orchestrator.py  state.py
services/orchestrator/src/orchestrator/memory/: __init__.py  checkpointer.py
services/orchestrator/src/orchestrator/tools/: __init__.py  mcp_client.py
services/orchestrator/tests/: __init__.py  conftest.py  test_agents.py  test_graph.py
services/rag-indexer/: Dockerfile  pyproject.toml
services/rag-indexer/src/rag_indexer/: __init__.py  chunker.py  embedder.py  main.py  store.py
